--- a/router/Dockerfile
+++ b/router/Dockerfile
@@ -2,9 +2,11 @@ FROM python:alpine3.17
 
 WORKDIR /app
 
-COPY . /app
+COPY requirements.txt /app
 
 RUN pip install -r requirements.txt
+
+COPY . /app
 
 EXPOSE 8080
 
