--- a/router/requirements.txt
+++ b/router/requirements.txt
@@ -1,3 +1,4 @@
+async-timeout==4.0.2
 click==8.1.3
 Flask==2.2.2
 importlib-metadata==5.1.0
@@ -6,5 +7,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 pika==1.3.1
 python-dotenv==0.21.0
+redis==4.4.0
+uuid==1.30
 Werkzeug==2.2.2
 zipp==3.11.0
