Clean Up: Assign namespace & guide

--- a/cee_intrepreter/kubernetes/cee-intrepreter-secrets.example.yml
+++ b/cee_intrepreter/kubernetes/cee-intrepreter-secrets.example.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: cee-intrepreter-secrets
+  namespace: cee-intrepreter
 type: Opaque
 data:
   REDIS_PASSWORD:
