--- a/cee_intrepreter/kubernetes/cee_intrepreter_deployment.yml
+++ b/cee_intrepreter/kubernetes/cee_intrepreter_deployment.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cee-intrepreter-service
+  namespace: cee-intrepreter
 spec:
   type: ClusterIP
   selector:
@@ -22,6 +23,7 @@ metadata:
   labels:
     app: cee-intrepreter
   name: cee-intrepreter
+  namespace: cee-intrepreter
 spec:
   replicas: 1
   selector:
@@ -53,5 +55,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cee-intrepreter-configmap
+  namespace: cee-intrepreter
 data:
   REDIS_SENTINELS: sentinel-0:5000,sentinel-1:5000,sentinel-2:5000
+  CEE_INTERPRETER_QUEUE: cee-intrepreter-queue.cee-intrepreter.svc.cluster.local
+  CEE_INTERPRETER_QUEUE_NAME: cee-intrepreter-queue
