--- a/cee_intrepreter/kubernetes/cee_intrepreter_queue.yml
+++ b/cee_intrepreter/kubernetes/cee_intrepreter_queue.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cee-intrepreter-queue
+  namespace: cee-intrepreter
 spec:
   type: ClusterIP
   selector:
@@ -20,6 +21,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cee-intrepreter-queue-configmap
+  namespace: cee-intrepreter
 data:
   PLACEHOLDER: "NONE"
 ---
@@ -27,6 +29,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: cee-intrepreter-queue-pvc
+  namespace: cee-intrepreter
 spec:
   accessModes:
     - ReadWriteOnce
@@ -39,6 +42,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: cee-intrepreter-queue-secret
+  namespace: cee-intrepreter
 stringData:
   PLACEHOLDER: "NONE"
 type: Opaque
@@ -47,6 +51,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: cee-intrepreter-queue
+  namespace: cee-intrepreter
 spec:
   serviceName: "not-applicable"
   selector:
