--- a/cee_intrepreter/requirements.txt
+++ b/cee_intrepreter/requirements.txt
@@ -1,4 +1,9 @@
+certifi==2022.12.7
+charset-normalizer==2.1.1
+idna==3.4
 pika==1.3.1
 python-dotenv==0.21.0
+requests==2.28.1
+urllib3==1.26.13
 redis==4.4.0
 async-timeout==4.0.2
