--- a/judge/kubernetes/development/judge-deployment.yml
+++ b/judge/kubernetes/development/judge-deployment.yml
@@ -38,7 +38,18 @@ spec:
           envFrom:
             - secretRef:
                 name: judge-secrets
+            - configMapRef:
+                name: judge-configmap
           ports:
             - containerPort: 8080
               name: http
               protocol: TCP
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: judge-configmap
+  namespace: judge
+data:
+  REDIS_SENTINELS: sentinel.redis.svc.cluster.local
+  ENVIRONMENT: development
