--- a/cee_intrepreter/kubernetes/deployment/cee_intrepreter_deployment.yml
+++ b/cee_intrepreter/kubernetes/deployment/cee_intrepreter_deployment.yml
@@ -50,6 +50,8 @@ spec:
                 name: cee-intrepreter-configmap
             - secretRef:
                 name: cee-intrepreter-secrets
+      nodeSelector:
+        hostname: node2
 ---
 apiVersion: v1
 kind: ConfigMap
