--- a/cee_intrepreter/kubernetes/deployment/cee-intrepreter-secrets.example.yml
+++ b/cee_intrepreter/kubernetes/deployment/cee-intrepreter-secrets.example.yml
@@ -7,3 +7,5 @@ type: Opaque
 data:
   REDIS_HOST: primary.xxx.yyyyyy.zzz1.cache.amazonaws.com
   SUBMISSION_QUEUE: amqps://algorint:algorint-rabbitmq-password-21012023@b-d3bcfae3-51db-4a69-9d45-ce2badef3bd8.mq.ap-southeast-1.amazonaws.com:5671
+  RABBITMQ_USERNAME: base64(algorint)
+  RABBITMQ_PASSWORD: base64(algorint-rabbitmq-password-21012023)
