Features: CEE compiler

--- a/router/kubernetes/deployment/router-deployment.yml
+++ b/router/kubernetes/deployment/router-deployment.yml
@@ -54,4 +54,5 @@ metadata:
   namespace: router
 data:
   CEE_INTERPRETER_QUEUE_NAME: cee-intrepreter-queue
+  CEE_COMPILER_QUEUE_NAME: cee-compiler-queue
   ENVIRONMENT: production
