--- a/cee_intrepreter/Dockerfile
+++ b/cee_intrepreter/Dockerfile
@@ -1,19 +1,19 @@
-FROM alpine:3.16
+FROM python:alpine3.16
 
 WORKDIR /app
-
-RUN apk add --update --no-cache python3 && ln -sf python3 /usr/bin/python
-
-RUN apk add --update nodejs
-
-RUN python3 -m ensurepip
-
-RUN pip3 install --no-cache --upgrade pip setuptools
 
 COPY requirements.txt /app
 
 RUN pip3 install -r requirements.txt
 
+RUN mkdir /app/code
+
 COPY . /app
+
+ENV WORK_DIR=/app
+
+ENV PYTHON_CEE_INTERPRETER_IMAGE=python:alpine3.16
+
+ENV NODEJS_CEE_INTERPRETER_IMAGE=node:lts-alpine3.17
 
 CMD ["python3", "main.py"]
