--- a/cee-compiler/Dockerfile
+++ b/cee-compiler/Dockerfile
@@ -1,17 +1,4 @@
-FROM alpine:3.16
-
-RUN apk add --no-cache \
-    build-base \
-    gcc \
-    g++ \
-    rust \
-    musl-dev
-
-RUN apk add --update --no-cache python3 && ln -sf python3 /usr/bin/python
-
-RUN python3 -m ensurepip
-
-RUN pip3 install --no-cache --upgrade pip setuptools
+FROM python:alpine3.16
 
 WORKDIR /app
 
@@ -19,7 +6,16 @@ COPY requirements.txt /app
 
 RUN pip3 install -r requirements.txt
 
+RUN mkdir /app/code
+
 COPY . /app
 
-CMD ["python3", "main.py"]
+ENV WORK_DIR=/app
 
+ENV CPP_CEE_COMPILER_IMAGE=frolvlad/alpine-gxx
+
+ENV C_CEE_COMPILER_IMAGE=frolvlad/alpine-gxx
+
+ENV RUST_CEE_COMPILER_IMAGE=frolvlad/alpine-rust
+
+CMD ["python3", "main.py"]
