--- a/cee-compiler/kubernetes/development/cee-compiler-secrets.example.yml
+++ b/cee-compiler/kubernetes/development/cee-compiler-secrets.example.yml
@@ -5,5 +5,5 @@ metadata:
   namespace: cee-compiler
 type: Opaque
 data:
-  REDIS_PASSWORD:
-  REDIS_MASTER_NAME:
+  REDIS_PASSWORD: YS12ZXJ5LWNvbXBsZXgtcGFzc3dvcmQtaGVyZQo=
+  REDIS_MASTER_NAME: bXltYXN0ZXIK
