--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.4.6",
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
+    "monaco-editor": "^0.36.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
