--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.4.6",
+    "@uiw/react-markdown-editor": "^5.11.1",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "monaco-editor": "^0.36.0",
