--- a/client/server/package.json
+++ b/client/server/package.json
@@ -16,10 +16,13 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^7.0.1",
     "rimraf": "^4.2.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "nodemon": "^2.0.21"
   }
 }
