--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.4.6",
+    "@types/showdown": "^2.0.0",
     "@uiw/react-markdown-editor": "^5.11.1",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "html-react-parser": "^3.0.12",
     "monaco-editor": "^0.36.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "showdown": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
