--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.4.6",
+    "@react-oauth/google": "^0.8.0",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@types/react-redux": "^7.1.25",
     "@types/showdown": "^2.0.0",
     "@uiw/react-markdown-editor": "^5.11.1",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "html-react-parser": "^3.0.12",
+    "jwt-decode": "^3.1.2",
     "monaco-editor": "^0.36.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "showdown": "^2.1.0"
   },
