--- a/client/server/package.json
+++ b/client/server/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "axios": "^1.3.4",
     "concurrently": "^7.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "google-auth-library": "^8.7.0",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^7.0.1",
     "rimraf": "^4.2.0"
   },
