--- a/router/kubernetes/deployment/router-deployment.yml
+++ b/router/kubernetes/deployment/router-deployment.yml
@@ -12,7 +12,7 @@ spec:
       port: 80
       targetPort: 8080
       name:
-  type: LoadBalancer
+  type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
