Migrate development storage class

--- a/application_database/kubernetes/mongo-deployment.yml
+++ b/application_database/kubernetes/mongo-deployment.yml
@@ -25,7 +25,7 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: hostpath
+  storageClassName: standard
 ---
 apiVersion: apps/v1
 kind: StatefulSet
