--- a/submission_database/kubernetes/sentinels.yml
+++ b/submission_database/kubernetes/sentinels.yml
@@ -70,7 +70,7 @@ spec:
         name: data
       spec:
         accessModes: ["ReadWriteOnce"]
-        storageClassName: "hostpath"
+        storageClassName: "standard"
         resources:
           requests:
             storage: 50Mi
