--- a/submission_queue/kubernetes/submission_queue.yml
+++ b/submission_queue/kubernetes/submission_queue.yml
@@ -43,7 +43,7 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: hostpath
+  storageClassName: standard
 ---
 apiVersion: v1
 kind: Secret
