--- a/client/server/package.json
+++ b/client/server/package.json
@@ -8,7 +8,8 @@
     "prestart": "npm run build",
     "start": "node build/server.js",
     "preserve": "npm run build",
-    "serve": "concurrently \"npx tsc -w\" \"nodemon build/server.js\""
+    "serve": "concurrently \"npx tsc -w\" \"nodemon build/server.js\"",
+    "seeds": "npm run build && node build/seeds/index.js"
   },
   "keywords": [],
   "author": "",
