--- a/cee/kubernetes/development/cee-deployment.yml
+++ b/cee/kubernetes/development/cee-deployment.yml
@@ -52,3 +52,37 @@ data:
   SUBMISSION_QUEUE: submission-queue.submission-queue.svc.cluster.local
   CEE_INTERPRETER_QUEUE_NAME: cee-intrepreter-queue
   ENVIRONMENT: development
+---
+apiVersion: keda.sh/v1alpha1
+kind: ScaledObject
+metadata:
+  name: cee-scaledobject
+  namespace: cee
+spec:
+  scaleTargetRef:
+    name: cee
+    kind: Deployment
+    apiVersion: apps/v1
+  minReplicaCount: 1
+  maxReplicaCount: 10
+  triggers:
+    - type: rabbitmq
+      metadata:
+        protocol: amqp
+        vhostName: /
+        queueName: cee-intrepreter-queue
+        mode: QueueLength
+        value: "2"
+      authenticationRef:
+        name: cee-trigger-auth-rabbitmq-conn
+---
+apiVersion: keda.sh/v1alpha1
+kind: TriggerAuthentication
+metadata:
+  name: cee-trigger-auth-rabbitmq-conn
+  namespace: cee
+spec:
+  secretTargetRef:
+    - parameter: host
+      name: cee-secrets
+      key: RABBITMQ_HOST
