--- a/cee/dockerfile
+++ b/cee/dockerfile
@@ -12,8 +12,16 @@ COPY . .
 # build all the packages in the current directory and its subdirectories
 RUN go build -o /usr/local/bin/app ./...
 
-FROM alpine as runtime
+FROM docker:23.0.6-dind-alpine3.18 as runtime
+
+RUN apk add --no-cache bash
+
+COPY ./start.sh /start.sh
+
+RUN chmod +x /start.sh
 
 COPY --from=build /usr/local/bin/app /app
 
-CMD [ "./app" ]
+WORKDIR /
+
+ENTRYPOINT ["bash", "/start.sh" ]
