Router:  Update Deployment file

--- a/router/kubernetes/development/router-deployment.yml
+++ b/router/kubernetes/development/router-deployment.yml
@@ -53,6 +53,6 @@ metadata:
 data:
   CEE_INTERPRETER_QUEUE_NAME: cee-intrepreter-queue
   CEE_COMPILER_QUEUE_NAME: cee-compiler-queue
-  SUBMISSION_QUEUE: submission-queue.submission-queue.svc.cluster.local
+  SUBMISSION_QUEUE: amqp://submission-queue.submission-queue.svc.cluster.local:5672/
   REDIS_SENTINELS: sentinel.redis.svc.cluster.local
   ENVIRONMENT: development
