--- a/router/kubernetes/development/router-sercrets.example.yml
+++ b/router/kubernetes/development/router-sercrets.example.yml
@@ -5,5 +5,7 @@ metadata:
   namespace: router
 type: Opaque
 data:
-  REDIS_PASSWORD: YS12ZXJ5LWNvbXBsZXgtcGFzc3dvcmQtaGVyZQo
+  REDIS_PASSWORD: YS12ZXJ5LWNvbXBsZXgtcGFzc3dvcmQtaGVyZQo=
   REDIS_MASTER_NAME: bXltYXN0ZXIK
+  RABBMITMQ_USERNAME: Z3Vlc3Q=
+  RABBITMQ_PASSWORD: Z3Vlc3Q=
