--- a/cee/kubernetes/development/cee-deployment.yml
+++ b/cee/kubernetes/development/cee-deployment.yml
@@ -22,11 +22,11 @@ spec:
           imagePullPolicy: Always
           resources:
             limits:
-              memory: "1000Mi"
+              memory: "500Mi"
               cpu: 1
             requests:
-              memory: "200Mi"
-              cpu: 0.5
+              memory: "500Mi"
+              cpu: 1
           securityContext:
             privileged: true
           envFrom:
@@ -45,8 +45,7 @@ data:
   SUBMISSION_QUEUE: amqp://submission-queue.submission-queue.svc.cluster.local:5672/
   REDIS_HOST: redis.redis.svc.cluster.local
   CEE_INTERPRETER_QUEUE_NAME: cee-intrepreter-queue
-  # SUPPORTED_LANGUAGES: python@python:alpine3.16@python-code.py@.py,nodejs@node:lts-alpine3.17@node-code.js,c@frolvlad/alpine-gxx,cpp:frolvlad/alpine-gxx,rust:frolvlad/alpine-rust
-  SUPPORTED_LANGUAGES: python@python:alpine3.16@python-code.py@.py
+  SUPPORTED_LANGUAGES: python@python:alpine3.16@.py@interpreter@python code.py,nodejs@node:alpine3.18@.js@interpreter@node code.js,c@frolvlad/alpine-gxx@.c@compiler@gcc --static code.c -o code@./code,cpp@frolvlad/alpine-gxx@.cpp@compiler@c++ --static code.cpp -o code@./code
   ENVIRONMENT: development
 ---
 apiVersion: keda.sh/v1alpha1
@@ -59,8 +58,9 @@ spec:
     name: cee
     kind: Deployment
     apiVersion: apps/v1
-  minReplicaCount: 1
-  maxReplicaCount: 10
+  pollingInterval: 2
+  minReplicaCount: 2
+  maxReplicaCount: 5
   triggers:
     - type: rabbitmq
       metadata:
