Fix(Deploy): Fix CEE Deployment

--- a/cee/kubernetes/deployment/cee-secrets.example.yml
+++ b/cee/kubernetes/deployment/cee-secrets.example.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: cee
 type: Opaque
 data:
-  REDIS_PASSWORD: YS12ZXJ5LWNvbXBsZXgtcGFzc3dvcmQtaGVyZQ==
+  REDIS_PASSWORD: 
   REDIS_MASTER_NAME: bXltYXN0ZXIK
   RABBMITMQ_USERNAME: Z3Vlc3Q=
   RABBITMQ_PASSWORD: Z3Vlc3Q=
