--- a/client/kubernetes/deployment/client-aws.yaml
+++ b/client/kubernetes/deployment/client-aws.yaml
@@ -22,8 +22,7 @@ metadata:
   namespace: client
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # Use "alb" or remove for default ELB type which is classic
-    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
-    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
+    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing # cannot us IP
 spec:
   type: LoadBalancer
   selector:
