[Pipeline] Update Execution Environment

--- a/.github/workflows/project.yaml
+++ b/.github/workflows/project.yaml
@@ -27,6 +27,7 @@ jobs:
   project:
     name: 'Cluster Initialization'
     environment: ${{ github.event.inputs.environment }}
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
