--- a/.github/workflows/provision.yaml
+++ b/.github/workflows/provision.yaml
@@ -21,6 +21,7 @@ jobs:
   cluster:
     name: 'Cluster Initialization'
     environment: ${{ github.event.inputs.environment }}
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
