--- a/.github/workflows/deprovision.yaml
+++ b/.github/workflows/deprovision.yaml
@@ -1,4 +1,4 @@
-name: 1. Cluster Initialization
+name: 3. Cluster Deprovision
 
 on:
   workflow_dispatch:
@@ -20,20 +20,20 @@ env:
   PROJECT: ${{ github.event.inputs.project }}
 
 jobs:
-  cluster:
-    name: 'Cluster Initialization'
+  deprovision:
+    name: 'Cluster Deprovision'
     environment: ${{ github.event.inputs.environment }}
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-        
+
     - name: 'Setup NodeJS'
       uses: actions/setup-node@v4
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
-      
+
     - name: Kubectl tool installer
       uses: Azure/setup-kubectl@v4.0.0
       with:
@@ -46,38 +46,38 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-southeast-1
 
-     - name: Install eksctl
+    - name: Configure Kube-Config
+      run: |
+        aws eks --region ap-southeast-1 update-kubeconfig --name eks-cluster
+        kubectl version
+
+    - name: Install eksctl
       run: |
         ARCH=amd64
         PLATFORM=$(uname -s)_$ARCH
         curl -sLO "https://github.com/eksctl-io/eksctl/releases/latest/download/eksctl_$PLATFORM.tar.gz"
         curl -sL "https://github.com/eksctl-io/eksctl/releases/latest/download/eksctl_checksums.txt" | grep $PLATFORM | sha256sum --check
         tar -xzf eksctl_$PLATFORM.tar.gz -C /tmp && rm eksctl_$PLATFORM.tar.gz
-        sudo mv /tmp/eksctl /usr/local/bin   
-        
+        sudo mv /tmp/eksctl /usr/local/bin
+
+    - name: Destroy Client Application
+      working-directory: ${{ github.workspace }}/client/kubernetes/deployment
+      run: |
+        kubectl delete -f client-aws.yml
+    
+    - name: Destroy IRSA
+      run: |
+        eksctl delete iamserviceaccount --name=aws-load-balancer-controller --namespace=kube-system --cluster=eks-cluster --wait
+
     - name: Plan Terraform
       working-directory: ${{ github.workspace }}/terraform
       id: plan
       run: |
         terraform init
         terraform workspace select -or-create ${{ env.ENVIRONMENT }}-${{ env.PROJECT }} 
-        terraform plan 
+        terraform plan -destroy
 
     - name: Apply Terraform
       working-directory: ${{ github.workspace }}/terraform
       run: |
-        terraform apply -auto-approve
-
-
-    - name: Configure AWS Load Balancer Controller EKS
-      working-directory: ${{ github.workspace }}/terraform/iam
-      run: |
-        aws eks --region ap-southeast-1 update-kubeconfig --name eks-cluster
-        aws iam create-policy --policy-name AWSLoadBalancerControllerIAMPolicy --policy-document file://AWSLoadBalancerController.json
-        eksctl create iamserviceaccount --cluster=eks-cluster --namespace=kube-system --name=aws-load-balancer-controller --role-name AmazonEKSLoadBalancerControllerRole --attach-policy-arn=arn:aws:iam::999229353546:policy/AWSLoadBalancerControllerIAMPolicy --approve
-        export VPC_ID=$(aws eks describe-cluster \
-            --name eks-cluster \
-            --query "cluster.resourcesVpcConfig.vpcId" \
-            --output text)
-        helm repo add eks https://aws.github.io/eks-charts
-        helm install aws-load-balancer-controller eks/aws-load-balancer-controller --set region=ap-southeast-1 --set clusterName=eks-cluster -n kube-system --set serviceAccount.create=false --set serviceAccount.name=aws-load-balancer-controller --set vpcId=$VPC_ID
+        terraform destroy -auto-approve
